# vue3-fastapi

./: README.md  pyproject.toml
src/vue3_fastapi/: __init__.py  cli.py  new_project.py  util.py
src/vue3_fastapi/resources/apscheduler/src/project_name/: scheduler.py
src/vue3_fastapi/resources/fastapi_cgi/: .env.cgi  tasks.json
src/vue3_fastapi/resources/fastapi_cgi/cgi/: .htaccess  index.cgi
src/vue3_fastapi/resources/plotly/js/src/components/: ExamplePlot.vue
src/vue3_fastapi/resources/plotly/ts/src/components/: ExamplePlot.vue
src/vue3_fastapi/resources/project_template/: .dockerignore  .editorconfig  Dockerfile  README.md
src/vue3_fastapi/resources/project_template/backend/src/project_name/: __init__.py  __main__.py  cli.py  frontend.py
src/vue3_fastapi/resources/project_template/backend/src/project_name/api/: __init__.py
src/vue3_fastapi/resources/project_template/backend/src/project_name/api/v1/: __init__.py  example.py
src/vue3_fastapi/resources/project_template/backend/src/project_name/common/: logger.py  settings.py
src/vue3_fastapi/resources/project_template/frontend/: .env.backend  .env.production  .prettierrc
src/vue3_fastapi/resources/project_template/frontend/js/src/components/: HelloFastAPI.vue
src/vue3_fastapi/resources/project_template/frontend/plotly/js/src/components/: ExamplePlot.vue
src/vue3_fastapi/resources/project_template/frontend/ts/: vite.config.ts
src/vue3_fastapi/resources/project_template/frontend/ts/src/components/: HelloFastAPI.vue
src/vue3_fastapi/resources/vue-router/ts/src/router/: index.ts
